--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button-primary {
+  @apply bg-indigo-500 py-1 px-2 text-white rounded-lg shadow-xl hover:bg-indigo-800 cursor-pointer;
+}
+.button-secondary {
+  @apply bg-gray-500 py-1 px-2 text-white rounded-lg shadow-xl hover:bg-gray-800 cursor-pointer;
+}
+
+input {
+  @apply p-1 outline-none border border-indigo-300 rounded-lg my-2 focus:border-indigo-700;
+}
+
+h1 {
+  @apply text-2xl font-bold text-gray-900;
+}
+
+table {
+  width: 100%;
+  margin: 10px;
+  overflow-y: scroll;
+}
+
+table td,
+table th {
+  padding: 8px;
+  border: 1px solid #ddd;
+}
+
+table th {
+  background-color: green;
+  color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+}
+
+table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+table tr:hover {
+  background-color: #ddd;
+}
